--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <div class="stringInput">
             <input type="text" placeholder="Enter Your string" id="stringTextBx">
             <input type="button" value="Accept" class="button" id="acceptString">
+            <input type="button" value="New String" class="button" id="newString">
         </div>
         <section id="stringButtons">
             <div>
